--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -13,10 +13,15 @@
     --font: "Raleway", sans-serif;
 }
 
+
 body {
     font-family: var(--font);
     color: var(--color-text);
     margin: 0;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 a:hover {
